[package]
name = "rate-limiter"
version = "0.1.0"
description = "On-chain rate limiter - Web2 backend pattern on Solana"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "rate_limiter"

[features]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
cpi = ["no-entrypoint"]
default = []

[dependencies]
anchor-lang = "0.30.1"
